// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render primary button 1`] = `
<div>
  <button
    class="n-button Primary"
  >
    Primary
  </button>
</div>
`;

exports[`Button should render secondary button 1`] = `
<div>
  <button
    class="n-button Secondary"
  >
    Secondary
  </button>
</div>
`;
